--- a/src/components/core/Footer.astro
+++ b/src/components/core/Footer.astro
@@ -3,7 +3,7 @@
 const { class: className } = Astro.props;
 ---
 
-<footer class:list={["py-4 px-6 w-full bg-background", className]}>
+<footer class:list={["py-4 px-6 w-full", className]}>
   <div
     class="container flex flex-col items-center justify-between gap-4 md:flex-row"
   >
