--- a/src/components/core/NavMenu.astro
+++ b/src/components/core/NavMenu.astro
@@ -1,7 +1,7 @@
 ---
 import { Button } from "@/components/ui/button";
 
-import { menu_items } from "@/config";
+import { menu_items } from "config";
 
 const pathname = new URL(Astro.request.url).pathname;
 ---
