--- a/src/layouts/DocsLayout.astro
+++ b/src/layouts/DocsLayout.astro
@@ -10,7 +10,7 @@ import TableofContent from "@/components/docs/TableofContents.astro";
 import { ScrollArea } from "@/components/ui/scroll-area";
 
 import { menu, capitalizeFirstLetter } from "@/lib/utils";
-import { LOCALE } from "@/config";
+import { LOCALE, docconfig } from "config";
 
 interface Props {
   title?: string | undefined;
@@ -40,23 +40,27 @@ const { title, description, ogImage, headings } = Astro.props as Props;
       <Header class="border-b bg-background" />
       <main class="flex flex-1 flex-col md:flex-row container">
         <div
-          class="px-6 py-4 hidden md:flex md:w-1/5 max-h-static_sidemenu sticky top-[69px]"
+          class="px-6 py-4 hidden md:flex md:w-1/4 lg:w-1/5 max-h-static_sidemenu sticky top-[69px]"
         >
           <ScrollArea className="h-full w-full" client:only="react">
-            <SideNavMenu items={menu} level={0} />
+            {
+              !docconfig.hide_side_navinations && (
+                <SideNavMenu items={menu} level={0} />
+              )
+            }
           </ScrollArea>
         </div>
-        <div class="px-6 py-4 w-full md:w-3/5">
-          <Breadcrumbs class="" />
+        <div class="px-6 py-4 w-full md:w-3/4 lg:w-3/5">
+          {!docconfig.hide_breadcrumbs && <Breadcrumbs class="" />}
           <div class="prose">
             <slot />
           </div>
         </div>
         <div
-          class="px-6 py-4 hidden lg:flex md:w-1/5 max-h-static_sidemenu sticky top-[69px]"
+          class="px-6 py-4 hidden lg:flex lg:w-1/5 max-h-static_sidemenu sticky top-[69px]"
         >
           <ScrollArea className="h-full w-full" client:only="react">
-            <TableofContent {headings} />
+            {!docconfig.hide_table_of_contents && <TableofContent {headings} />}
           </ScrollArea>
         </div>
       </main>
