--- a/src/components/core/NavMenu.astro
+++ b/src/components/core/NavMenu.astro
@@ -4,6 +4,7 @@ import { Button } from "@/components/ui/button";
 import { menu_items } from "config";
 
 const pathname = new URL(Astro.request.url).pathname;
+const pathname_part = pathname.split("/")[1];
 ---
 
 <div class="flex gap-4">
@@ -11,8 +12,17 @@ const pathname = new URL(Astro.request.url).pathname;
     menu_items.map((item) => (
       <a href={item.href}>
         <Button
-          variant={pathname === item.href ? "secondary" : "ghost"}
+          variant={
+            "/" + pathname_part === "/" + item.href.split("/")[1]
+              ? "secondary"
+              : "ghost"
+          }
           key={item.href}
+          className={
+            "/" + pathname_part === "/" + item.href.split("/")[1]
+              ? "text-foreground"
+              : "text-muted-foreground"
+          }
           client:load
         >
           {item.title}
