--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -21,7 +21,7 @@ const { title, description, ogImage } = Astro.props;
   </head>
   <body class="bg-background text-foreground font-sans">
     <div class="flex flex-col min-h-screen">
-      <Header class="" />
+      <Header class="bg-background" />
       <main class="flex flex-1 flex-col md:flex-row justify-center py-6">
         <div class="md:w-3/4 md:max-w-8xl">
           <slot />
