--- a/src/layouts/DocsLayout.astro
+++ b/src/layouts/DocsLayout.astro
@@ -11,10 +11,15 @@ import { ScrollArea } from "@/components/ui/scroll-area";
 
 import { menu, capitalizeFirstLetter } from "@/lib/utils";
 import { LOCALE, docconfig } from "config";
+import MainContent from "@/components/docs/MainContent.astro";
 
 interface Props {
-  title?: string | undefined;
-  description?: string | undefined;
+  title: string;
+  author: string;
+  pubDatetime?: Date;
+  description?: string;
+  draft: boolean;
+  tags: string[];
   ogImage?: URL | undefined;
   headings?: {
     depth: number;
@@ -23,7 +28,16 @@ interface Props {
   }[];
 }
 
-const { title, description, ogImage, headings } = Astro.props as Props;
+const {
+  title,
+  author,
+  pubDatetime,
+  description,
+  draft,
+  tags,
+  ogImage,
+  headings,
+} = Astro.props as Props;
 ---
 
 <!doctype html>
@@ -51,10 +65,18 @@ const { title, description, ogImage, headings } = Astro.props as Props;
           </ScrollArea>
         </div>
         <div class="px-6 py-4 w-full md:w-3/4 lg:w-3/5">
-          {!docconfig.hide_breadcrumbs && <Breadcrumbs class="" />}
-          <div class="prose">
+          <MainContent
+            title={title}
+            author={author}
+            pubDatetime={pubDatetime}
+            description={description}
+            draft={draft}
+            tags={tags}
+            ogImage={ogImage}
+            headings={headings}
+          >
             <slot />
-          </div>
+          </MainContent>
         </div>
         <div
           class="px-6 py-4 hidden lg:flex lg:w-1/5 max-h-static_sidemenu sticky top-[69px]"
