--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -73,20 +73,20 @@ h1 {
 }
 
 h2 {
-  @apply scroll-m-20 pb-2 text-3xl font-semibold tracking-tight first:mt-0;
+  @apply mt-10 scroll-m-20 border-b pb-2 text-3xl font-semibold tracking-tight transition-colors first:mt-0;
 }
 
 h3 {
-  @apply scroll-m-20 text-2xl font-semibold tracking-tight;
+  @apply mt-8 scroll-m-20 text-2xl font-semibold tracking-tight;
 }
 
 h4 {
   @apply scroll-m-20 text-xl font-semibold tracking-tight;
 }
 
-/* p {
+p {
   @apply leading-7 [&:not(:first-child)]:mt-6;
-} */
+}
 
 blockquote {
   @apply mt-6 border-l-2 pl-6 italic;
@@ -94,6 +94,22 @@ blockquote {
 
 ul {
   @apply my-6 ml-6 list-disc [&>li]:mt-2;
+}
+
+table {
+  @apply w-full;
+}
+
+tr {
+  @apply m-0 border-t p-0 even:bg-muted;
+}
+
+th {
+  @apply border px-4 py-2 text-left font-bold [&[align=center]]:text-center [&[align=right]]:text-right;
+}
+
+td {
+  @apply border px-4 py-2 text-left [&[align=center]]:text-center [&[align=right]]:text-right;
 }
 
 .lead {
@@ -114,9 +130,9 @@ ul {
 
 /* ===== markdown ===== */
 
-.prose > * {
+/* .prose > * {
   @apply m-0 p-0 space-y-2 pb-2;
-}
+} */
 
 .prose iframe {
   @apply w-full aspect-video h-auto;
