--- a/src/components/docs/Breadcrumbs.astro
+++ b/src/components/docs/Breadcrumbs.astro
@@ -5,13 +5,15 @@ import {
   BreadcrumbLink,
   BreadcrumbList,
 } from "@/components/ui/breadcrumb";
+
+import type { BreadcrumbsProps } from "@/lib/types";
 import { buildBreadcrumbs } from "@/lib/utils";
 
 // Get the current document's slug from route params
-const slug = Astro.url.pathname;
+const slug: string = Astro.url.pathname;
 
 // Build the breadcrumb trail
-const breadcrumbs = buildBreadcrumbs(slug || "");
+const breadcrumbs: BreadcrumbsProps = buildBreadcrumbs(slug || "");
 
 // To pass the tailwindcss classes to the astro component
 const { class: className } = Astro.props;
