--- a/src/components/core/Header.astro
+++ b/src/components/core/Header.astro
@@ -22,7 +22,7 @@ const { class: className } = Astro.props;
   >
     <div class="font-bold flex flex-row items-center">
       <a href={SITE.website} class="px-4">
-        <Button client:load className="">
+        <Button client:load className="" variant="default">
           {SITE.title}
         </Button>
       </a>
