--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import BaseLayout from "@/layouts/BaseLayout.astro";
 
 import { ScrollArea } from "@/components/ui/scroll-area";
+import { Search } from "@/components/core/Search";
 ---
 
 <BaseLayout
@@ -17,4 +18,6 @@ import { ScrollArea } from "@/components/ui/scroll-area";
     jokes left by Jokester were so funny that they couldn't help but laugh. And
     once they started laughing, they couldn't stop.
   </ScrollArea>
+
+  <Search client:only="react" />
 </BaseLayout>
