--- a/src/pages/docs/[...slug].astro
+++ b/src/pages/docs/[...slug].astro
@@ -1,6 +1,6 @@
 ---
 import { type CollectionEntry, getCollection } from "astro:content";
-import type { GetStaticPaths } from "astro";
+import type { GetStaticPaths, MarkdownHeading } from "astro";
 
 import DocsLayout from "@/layouts/DocsLayout.astro";
 
@@ -8,7 +8,7 @@ import type { Heading } from "@/lib/types";
 
 export const getStaticPaths = (async () => {
   const docs = await getCollection("docs", ({ data }) => !data.draft);
-  const headings = await Promise.all(
+  const headings: MarkdownHeading[][] = await Promise.all(
     docs.map((entry) => entry.render().then((data) => data.headings)),
   );
 
