search functionality added

--- a/src/components/core/Header.astro
+++ b/src/components/core/Header.astro
@@ -2,6 +2,7 @@
 import { ModeToggle } from "@/components/core/ModeToggle";
 import HamNavMenu from "@/components/core/HamNavMenu.astro";
 import NavMenu from "@/components/core/NavMenu.astro";
+import { Search } from "@/components/core/Search";
 
 import { Button } from "@/components/ui/button";
 
@@ -34,9 +35,11 @@ const { class: className } = Astro.props;
     <div class="md:hidden flex flex-row-reverse gap-4">
       <HamNavMenu />
       <ModeToggle client:load transition:persist />
+      <Search client:only="react" />
     </div>
 
     <div class="flex-row gap-4 hidden md:flex">
+      <Search client:only="react" />
       <ModeToggle client:load transition:persist />
     </div>
   </div>
