--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,5 +19,5 @@ import { Search } from "@/components/core/Search";
     once they started laughing, they couldn't stop.
   </ScrollArea>
 
-  <Search client:only="react" />
+  <!-- <Search client:only="react" /> -->
 </BaseLayout>
