--- a/src/components/core/Header.astro
+++ b/src/components/core/Header.astro
@@ -22,7 +22,7 @@ const { class: className } = Astro.props;
     class="flex space-x-4 justify-between items-center md:items-center md:space-x-0 md:max-w-8xl"
   >
     <div class="font-bold flex flex-row items-center">
-      <a href={SITE.website} class="px-4">
+      <a href="/" class="px-4">
         <Button client:load className="" variant="default">
           {SITE.title}
         </Button>
