experimenting with different styles

--- a/src/components/core/HeadSEO.astro
+++ b/src/components/core/HeadSEO.astro
@@ -1,5 +1,13 @@
 ---
 import "@/styles/globals.css";
+// Supports weights 100-800
+import "@fontsource-variable/jetbrains-mono";
+// Supports weights 100-900
+import "@fontsource-variable/montserrat";
+import "@fontsource/norwester";
+// Supports weights 400-800
+import "@fontsource-variable/baloo-2";
+import "@fontsource/varela-round";
 
 import { ViewTransitions } from "astro:transitions";
 
