--- a/src/components/home/hero.astro
+++ b/src/components/home/hero.astro
@@ -15,5 +15,6 @@ import { Button } from "@/components/ui/button";
     <div class="">
       <!-- <Image src={} /> -->
     </div>
+    <code>0123456789abcdefghijklmnopqrstuvwxyz</code>
   </div>
 </div>
