--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -59,11 +59,11 @@
 }
 
 h1 {
-  @apply scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl;
+  @apply scroll-m-20 text-4xl font-bold lg:text-5xl tracking-tight pt-2;
 }
 
 h2 {
-  @apply mt-10 scroll-m-20 border-b pb-2 text-3xl font-semibold tracking-tight transition-colors first:mt-0;
+  @apply mt-10 scroll-m-20 border-b pb-2 text-3xl font-semibold tracking-wide transition-colors first:mt-0;
 }
 
 h3 {
@@ -76,6 +76,10 @@ h4 {
 
 p {
   @apply leading-7 [&:not(:first-child)]:mt-6;
+}
+
+a {
+  @apply underline underline-offset-4;
 }
 
 blockquote {
@@ -118,16 +122,6 @@ td {
   @apply text-sm text-muted-foreground;
 }
 
-/* ===== markdown ===== */
-
-/* .prose > * {
-  @apply m-0 p-0 space-y-2 pb-2;
-} */
-
-.prose iframe {
-  @apply w-full aspect-video h-auto;
-}
-
 /* ===== scrollbar ===== */
 
 /* width */
@@ -150,6 +144,14 @@ td {
   @apply bg-card-foreground;
 }
 
+/* ===== codeblock ===== */
+
 .astro-code {
   @apply p-4 mt-2;
+}
+
+/* ===== markdown ===== */
+
+.prose iframe {
+  @apply w-full aspect-video h-auto;
 }
