--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,48 +4,48 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 213 13% 16%;
-    --muted: 0 12% 90%;
-    --muted-foreground: 0 12% 30%;
-    --popover: 0 0% 97%;
-    --popover-foreground: 213 13% 6%;
-    --card: 0 0% 98%;
-    --card-foreground: 213 13% 11%;
-    --border: 0 0% 95%;
-    --input: 0 0% 92%;
-    --primary: 213 13% 16%;
-    --primary-foreground: 213 13% 76%;
-    --secondary: 0 0% 85%;
-    --secondary-foreground: 213 3% 15%;
-    --accent: 0 0% 85%;
-    --accent-foreground: 0 0% 25%;
-    --destructive: 8 86% 40%;
-    --destructive-foreground: 0 0% 100%;
-    --ring: 213 13% 16%;
-    --radius: 0.3rem;
+    --background: 220 23% 95%;
+    --foreground: 234 16% 35%;
+    --muted: 220 12% 90%;
+    --muted-foreground: 220 12% 30%;
+    --popover: 220 23% 92%;
+    --popover-foreground: 234 16% 25%;
+    --card: 220 23% 93%;
+    --card-foreground: 234 16% 30%;
+    --border: 220 13% 90%;
+    --input: 220 13% 87%;
+    --primary: 266 85% 58%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 266 30% 75%;
+    --secondary-foreground: 266 30% 15%;
+    --accent: 220 23% 80%;
+    --accent-foreground: 220 23% 20%;
+    --destructive: 3 87% 37%;
+    --destructive-foreground: 3 87% 97%;
+    --ring: 266 85% 58%;
+    --radius: 0.5rem;
   }
 
   .dark {
-    --background: 216 28% 5%;
-    --foreground: 210 17% 82%;
-    --muted: 216 12% 15%;
-    --muted-foreground: 216 12% 65%;
-    --popover: 216 28% 7%;
-    --popover-foreground: 210 17% 92%;
-    --card: 216 28% 5%;
-    --card-foreground: 210 17% 87%;
-    --border: 216 18% 12%;
-    --input: 216 18% 15%;
-    --primary: 210 17% 82%;
-    --primary-foreground: 210 17% 22%;
-    --secondary: 216 28% 22%;
-    --secondary-foreground: 210 7% 85%;
-    --accent: 216 28% 22%;
-    --accent-foreground: 216 28% 82%;
-    --destructive: 1 86% 57%;
+    --background: 232 23% 18%;
+    --foreground: 227 68% 88%;
+    --muted: 232 12% 22%;
+    --muted-foreground: 232 12% 72%;
+    --popover: 232 23% 15%;
+    --popover-foreground: 227 68% 98%;
+    --card: 232 23% 16%;
+    --card-foreground: 227 68% 93%;
+    --border: 232 13% 23%;
+    --input: 232 13% 26%;
+    --primary: 267 83% 80%;
+    --primary-foreground: 267 83% 20%;
+    --secondary: 267 30% 25%;
+    --secondary-foreground: 267 30% 85%;
+    --accent: 232 23% 33%;
+    --accent-foreground: 232 23% 93%;
+    --destructive: 1 85% 48%;
     --destructive-foreground: 0 0% 100%;
-    --ring: 210 17% 82%;
+    --ring: 267 83% 80%;
   }
 }
 
@@ -79,7 +79,7 @@ p {
 }
 
 a {
-  @apply underline underline-offset-4;
+  @apply underline underline-offset-4 hover:text-primary;
 }
 
 blockquote {
@@ -120,6 +120,10 @@ td {
 
 .muted {
   @apply text-sm text-muted-foreground;
+}
+
+::selection {
+  @apply bg-foreground text-background;
 }
 
 /* ===== scrollbar ===== */
