--- a/src/components/core/HeadSEO.astro
+++ b/src/components/core/HeadSEO.astro
@@ -11,11 +11,7 @@ import "@fontsource/varela-round";
 
 import { ViewTransitions } from "astro:transitions";
 
-interface Props {
-  title?: string | undefined;
-  description?: string | undefined;
-  ogImage?: URL | undefined;
-}
+import type { HeadSEOProps } from "@/lib/types";
 
 const canonicalURL = new URL(Astro.url);
 
@@ -23,7 +19,7 @@ if (Astro.props.ogImage === undefined) {
   Astro.props.ogImage = new URL("og-image.jpg", canonicalURL);
 }
 
-const { title, description, ogImage } = Astro.props;
+const { title, description, ogImage } = Astro.props as HeadSEOProps;
 ---
 
 <meta charset="utf-8" />
